manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-app
  namespace: planning-app
  labels:
    app: planning-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: planning-app
  template:
    metadata:
      labels:
        app: planning-app
    spec:
      containers:
        - name: planning-app
          image: taakujobi/planning-app:v1
          ports:
            - containerPort: 80
