manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planning-app
  namespace: planning-app
spec:
  ingressClassName: nginx
  rules:
    - host: a95ed22fc0317406ba9efff1c4e9b5ec-c7061ca52137f717.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planning-app
                port:
                  number: 80
